<resources>
    <string name="TargetAudience">Target Audience</string>
    <string name="place_date_from">DD-MM-YYYY</string>
    <string name="place_date_to">DD-MM-YYYY</string>
    <string name="place_time_from">HH:MM</string>
    <string name="place_time_to">HH:MM</string>
    <string name="gst">GST(%)</string>
    <string name="googleAdsAppID">ca-app-pub-9730536466726178~7351210983</string>
    <string name="googleAdsAdUnitId">ca-app-pub-9730536466726178/2744715120</string>
    <string name="googlePlaceAPI">AIzaSyCUVWRZZji7uyu0xZdwYgC1q3xRJdReJ_Q</string>
    <string name="googleAdsInterstitialAdId">ca-app-pub-9730536466726178/7059902023</string>
    <string name="app_name">Cynapce</string>
    <string name="find_jobs">Targeted Healthcare Jobs</string>
    <string name="got_it">GOT IT</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_passwords">Forgot Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="not_register_yet">Not Registered Yet !</string>
    <string name="create_an_account">Create an Account</string>
    <string name="name">Name*</string>
    <string name="name_n">Name</string>
    <string name="specializations">Specializations</string>
    <string name="address">Address</string>
    <string name="email">Email*</string>
    <string name="email_n">Email</string>
    <string name="phone_number">Phone Number*</string>
    <string name="phone_number_n">Phone Number</string>
    <string name="occupation">Occupation</string>
    <string name="next">NEXT</string>
    <string name="dob">DOB</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="password_e">Password*</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="search">Search</string>
    <string name="_238_topics">238 Votes</string>
    <string name="_3_528_replies">528 Comments</string>
    <string name="_8_000_views">8,00 views</string>
    <string name="articles">My Articles</string>
    <string name="case_studies">Case Studies</string>
    <string name="dealers_and_distributors">Dealer and Distributors</string>
    <string name="my_conferences">My Events</string>
    <string name="my_job">My Job</string>
    <string name="logout">Logout</string>
    <string name="getting_published">Getting Published</string>
    <string name="message">Message</string>
    <string name="publish">PUBLISH</string>
    <string name="_5_hours_ago">5 Hours ago</string>
    <string name="newtxt">NEW</string>
    <string name="Rs">\u20B9</string>
    <string name="medical_profile">Medical Profile*</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="edit">EDIT</string>
    <string name="buy">BUY</string>
    <string name="jobs">Jobs</string>
    <string name="job_title">Job</string>
    <string name="profile_management">Profile Management</string>
    <string name="descriptions">Description</string>
    <string name="DealsDescriptions">Deal Description</string>
    <string name="experience">Yrs. of Experience</string>
    <string name="current_ctc">Current CTC(Annual)</string>
    <string name="expected_ctc">Expected CTC(Annual)</string>
    <string name="current_employer">Current Employer</string>
    <string name="preferred_job_location">Job Location(s)</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="post">POST</string>
    <string name="senior_resident_rmo">Senior Resident/RMO</string>
    <string name="posted_today">Posted Today</string>
    <string name="hazratganj_lucknow">Hazratganj, Lucknow</string>
    <string name="tags">Emergency,Medical records,Service Quality,Disaster Management</string>
    <string name="health_care_conference">Health Care Events</string>
    <string name="_22_jan_2018">22-Jan-2018</string>
    <string name="_5_10_pm">5:10 PM</string>
    <string name="case_1">CASE 1</string>
    <string name="demo_name">Demo Name</string>
    <string name="cancel">Cancel</string>
    <string name="croppertitle">Crop Image</string>
    <string name="crop">Crop</string>
    <string name="hello">Hello</string>
    <string name="save">SAVE</string>
    <string name="congrats">CONGRATS!</string>
    <string name="publishedSuccessfully">You are published successfully</string>
    <string name="specification">Specification</string>
    <string name="write_a_message">Write a message .... </string>
    <string name="hello_demo_user">Hello, Demo User</string>
    <string name="how_can_i_help_you">How can I help you ?</string>
    <string name="question_left">Ques Left</string>
    <string name="skip_question">Skip Ques</string>
    <string name="number">25</string>
    <string name="five_min">5:00</string>
    <string name="min">MIN</string>
    <string name="ques_demo">Question : Which of the following is known as Sairandhari vanam?</string>
    <string name="answer">Answer</string>
    <string name="previous">Prev</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="messgae_send_successfully">Your messgae has been send successfully</string>
    <string name="locate_on_map">Locate on map</string>
    <string name="posted_jobs">Posted Jobs</string>
    <string name="requested_jobs">Requested Jobs</string>
    <string name="post_jobs">Post Jobs</string>
    <string name="request_jobs">Request Jobs</string>
    <string name="apply">Apply</string>
    <string name="write_something_here">Write Something here</string>
    <string name="timelineMsg">I can\'t check what type of injuries. The patient is having trouble breathing</string>
    <string name="comments">Comments</string>
    <string name="vote">Vote</string>
    <string name="_840">840</string>
    <string name="_12_comments">12 Comments</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_start">LET\'S START</string>
    <string name="my_deals">My Deals</string>
    <string name="my_case_studies">My Case Studies</string>
    <string name="exit_msg">Press again to exit</string>
    <string name="medical_surgery">Medical Surgery</string>
    <string name="buy_product">Buying Products</string>
    <string name="sell_product">Selling Products</string>
    <string name="book_name">And To Think That I Saw It On Street</string>
    <string name="published_2008">Published (2008)</string>
    <string name="titleSell">Sell Products(Equipments)</string>
    <string name="create_amp_alert"><![CDATA[Create  Alert]]></string>
    <string name="notify">Notifications</string>
    <string name="chat_title">CHAT</string>
    <string name="job_description">Job Description</string>
    <string name="total_area">Total Area</string>
    <string name="built_up_area">Built Up Area</string>
    <string name="no_of_beds">No. of Beds</string>
    <string name="location">Location</string>
    <string name="sell_prod_hos">Sell Product(Hospitals)</string>
    <string name="licences">Licences</string>
    <string name="price">Price</string>
    <string name="add_more_">ADD MORE</string>
    <string name="sell_buy_practice_">Sell/Buy Product(Practice)</string>
    <string name="sent">SENT</string>
    <string name="request_sent">Your Request has been sent to the admin for approval.You will be notified soon!</string>
    <string name="buy_now">BUY NOW</string>
    <string name="share">Share</string>
    <string name="industry">Industry</string>
    <string name="functional_area">Functional Area</string>
    <string name="role">Role</string>
    <string name="applied_">APPLIED</string>
    <string name="apply_">APPLY</string>
    <string name="shortlist_">SHORTLIST</string>
    <string name="shortlisted_">SHORTLISTED</string>
    <string name="email_">Email</string>
    <string name="sell_buy_tie_ups">Sell/Buy Product(Tie Ups)</string>
    <string name="name_of_entity">Name of Entity</string>
    <string name="contact_person">Contact Person</string>
    <string name="name_books">Name</string>
    <string name="others_">Others</string>
    <string name="age">Age</string>
    <string name="contact_no_">Contact number</string>
    <string name="sell_buy_book">Sell/Buy Product (Books,Others)</string>
    <string name="log_in_with">Log in with</string>
    <string name="facebook_app_id">276650359650415</string>
    <string name="fb_login_protocol_scheme">fb276650359650415</string>
    <string name="rooms_or_chambers">Rooms or chambers</string>
    <string name="name_of_the_practice">Name of the practice</string>
    <string name="length">Length</string>
    <string name="width_">width</string>
    <string name="done_licence">Licence Done</string>
    <string name="left_licence">Licence Left </string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_country2">*Enter Country</string>
    <string name="quantity">Quantity</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_state2">*Enter State</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_city2">*Enter City</string>
    <string name="enter_hospital">Enter Hospital</string>
    <string name="enter_prac">Enter Practice</string>
    <string name="enter_specialization">Enter Specialization</string>
    <string name="enter_tieup_for">Enter TieUp For</string>
    <string name="enter_seeking">Enter Seeking</string>
    <string name="enter_tie_up_with">Enter Tie Up With</string>
    <string name="enter_medical_profile">Enter Medical Profile</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure, you want to logout?</string>
    <string name="dialog_profile_txt">Please fill the mandatory fields like, medical profile, title, specialisation, contact no in your profile to perform any activities in the application.</string>
    <string name="specialilty">Specialilty</string>
    <string name="target_audience_speciality">Target audience Speciality</string>
    <string name="target_audience_speciality_selct">Select target audience Speciality</string>
    <string name="target_audience_department_selct">Select target audience Department</string>
    <string name="target_audience_department">Target audience Department</string>
    <string name="within_city">Within City</string>
    <string name="add_location">Add Location</string>
    <string name="within_state">Within State</string>
    <string name="within_all_india">Within All India</string>
    <string name="filter">FILTER</string>
    <string name="enter_the_seat">Enter the Seats</string>
    <string name="registered">Registered</string>
    <string name="interested">Interested</string>
    <string name="views">Views</string>
    <string name="auto">Auto</string>
    <string name="cost">Cost</string>
    <string name="duration">Duration</string>
    <string name="days">Days</string>
    <string name="contact">Contact</string>
    <string name="event_host">Event Host</string>
    <string name="time_to">Time(To)</string>
    <string name="venue">Venue</string>
    <string name="time_from">Time(From)</string>
    <string name="date_to">Date(End)</string>
    <string name="date_from">Date(Start)</string>
    <string name="registration_fee">Registration Fee</string>
    <string name="brochure_charges">Brochure Charges</string>
    <string name="perticuler_for_country">Country</string>
    <string name="perticuler_for_state">State</string>
    <string name="upload_your_brochures">Upload your brochures</string>
    <string name="all">Check All</string>
    <string name="ok">OK</string>
    <string name="ext">External</string>
    <string name="New">New Folder</string>
    <string name="profilepic">profilepic</string>
</resources>