<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="60">
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/New"
        android:layout_weight="30"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:id="@+id/New"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ext"
            android:layout_weight="30"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:id="@+id/storage"/>

    </LinearLayout>
    <TextView
        android:id="@+id/folderpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:visibility="gone"
        android:textSize="15dp" />


    
    <ListView
        android:id="@+id/directorySelectionList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:choiceMode="multipleChoice" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:layout_weight=".5" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:id="@+id/all"
        android:visibility="gone"
        android:layout_weight="30" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/ok"
            android:layout_weight=".5" />
</LinearLayout>
</LinearLayout>