<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black">
    <ImageView
        android:id="@+id/msgImage"
        android:src="@drawable/no_img_placeholder"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:layout_height="@dimen/_220sdp"
        android:layout_marginBottom="@dimen/_5sdp"/>
    <TextView
        android:id="@+id/msgText"
        android:text="@string/timelineMsg"
        android:textColor="@color/fadeGrey"
        android:layout_below="@id/msgImage"
        android:textSize="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothicb"
        android:layout_marginStart="@dimen/_10sdp"/>
    <TextView
        android:textColor="@color/fadeGrey"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/_11sdp"
        android:padding="@dimen/_10sdp"
        android:fontFamily="@font/gothicb"
        android:text="@string/_8_000_views"
        android:drawableStart="@drawable/views_white"
        android:drawablePadding="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"/>
    <ImageView
        android:layout_alignParentEnd="true"
        android:padding="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:src="@drawable/tag"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"/>
    <TextView
        android:layout_above="@id/viewOne"
        android:textColor="@color/fadeGrey"
        android:textSize="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/gothicb"
        android:text="@string/_840"
        android:drawableStart="@drawable/like_inner_icon"
        android:drawablePadding="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_above="@id/viewOne"
        android:textColor="@color/fadeGrey"
        android:textSize="@dimen/_10sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/gothicb"
        android:text="@string/_12_comments"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/viewOne"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/view_color"
        android:layout_above="@+id/linOne"/>
    <LinearLayout
        android:id="@+id/linOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.2"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/gothicb"
                android:text="@string/vote"
                android:textColor="@color/fadeGrey"
                android:drawableStart="@drawable/like_blue"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/comment_lin_lay"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/gothicb"
                android:textColor="@color/fadeGrey"
                android:text="@string/comments"
                android:drawableStart="@drawable/comments_white"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/share"
                android:textColor="@color/fadeGrey"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center"
                android:fontFamily="@font/gothicb"
                android:text="@string/share"
                android:drawableStart="@drawable/share_white"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>