<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_15sdp"
    android:layout_marginStart="@dimen/_15sdp">
    <ImageView
        android:id="@+id/profilePic"
        android:contentDescription="@string/profilepic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"/>
    <TextView
        android:id="@+id/userName"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_toEndOf="@+id/profilePic"
        android:fontFamily="@font/gothicb"
        android:textColor="@color/light_black"
        android:text="@string/demo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/yearOfExp"
        android:textSize="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorgrey"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_toEndOf="@+id/profilePic"
        android:layout_below="@id/userName"
        android:fontFamily="@font/gothicb"
        android:text="@string/experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_5sdp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/view_color"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_below="@id/yearOfExp" />
</RelativeLayout>