<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp">
    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"/>
        <TextView
            android:id="@+id/userName"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_toEndOf="@+id/profilePic"
            android:fontFamily="@font/gothicb"
            android:textColor="@color/light_black"
            android:text="@string/demo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/time"
            android:text="@string/_5_hours_ago"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/gothicb"
            android:textSize="@dimen/_9sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/msg"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/colorgrey"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_toEndOf="@+id/db_tick"
            android:layout_below="@id/userName"
            android:fontFamily="@font/gothicb"
            android:text="@string/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/db_tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:visibility="gone"
        android:layout_toEndOf="@+id/profilePic"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_13sdp"
        android:background="@drawable/doble_tick" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/view_color"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_below="@id/msg" />
</RelativeLayout>