<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/profilePic"
                android:src="@drawable/avatar"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/demo_name"
                    android:fontFamily="@font/gothicb"
                    android:textSize="@dimen/_12sdp"/>
                <TextView
                    android:layout_below="@id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/fadeGrey"
                    android:text="@string/senior_resident_rmo"
                    android:fontFamily="@font/gothicb"
                    android:textSize="@dimen/_10sdp"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:gravity="end|center_vertical"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <ImageView
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/side_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
               <TextView
                   android:id="@+id/timeAgo"
                   android:padding="@dimen/_2sdp"
                   android:text="@string/_5_hours_ago"
                   android:textSize="@dimen/_9sdp"
                   android:textColor="@color/fadeGrey"
                   android:fontFamily="@font/gothicb"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>